Improve UI/UX across app: Custom arrows instead of default ones, better interaction feedback in ChatList, centered and aligned Statistics page, fixed Chat page header alignment

--- a/src/app/pages/chat-list/chat-list.page.scss
+++ b/src/app/pages/chat-list/chat-list.page.scss
@@ -1,6 +1,6 @@
 .content-wrapper {
   padding: 16px;
-  padding-bottom: 20vh;
+  padding-bottom: 2vh;
 }
 
 .bottom-bar {
@@ -109,14 +109,30 @@
 }
 
 .chat-card {
+  position: relative;
+
   display: flex;
   align-items: stretch;
   background: #FFEFD5;
   border-radius: 20px;
   padding: 5px;
   cursor: pointer;
-  transition: transform 0.1s ease;
+  transition: transform 0.1s ease, filter 0.1s ease;
   width: 80%;
+  overflow: hidden;
+}
+
+/* затемнение */
+.chat-card::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0);
+  transition: background 0.15s ease;
+}
+
+.chat-card:hover {
+  transform: scale(1.01);
 }
 
 .chat-card:active {
