--- a/src/app/pages/stats/stats.page.scss
+++ b/src/app/pages/stats/stats.page.scss
@@ -2,27 +2,67 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 
   padding: 16px;
   background: #000;
   color: #fff;
 }
 
-.header {
-  text-align: center;
+.header-bar {
+  width: 100%;
+  max-width: 400px;
+
+  margin: 0 auto;
+  margin-top: 5vh;
   margin-bottom: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
   font-family: Limelight;
+}
+
+.back-btn {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+  margin-left: 15px;
+}
+
+.back-btn:active {
+  transform: translateY(-50%) scale(0.9);
+}
+
+.back-icon {
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+}
+
+.header-bar h1 {
+  margin: 0;
 }
 
 .stats-container {
   width: 90%;
   max-width: 400px;
+
+  margin: 0 auto;
+  margin-top: 10px;
+
   display: flex;
   flex-direction: column;
   gap: 16px;
   align-items: center;
-  margin: 10px;
 }
 
 .stat-card {
@@ -48,21 +88,6 @@
 .empty{
   text-align: center;
   font-family: Lunasima;
-}
-
-.top-bar {
-  width: 20%;
-  max-width: 400px;
-  margin-bottom: 10px;
-}
-
-.back-btn {
-  margin-top: 20px;
-  background: transparent;
-  border: none;
-  color: white;
-  font-size: 30px;
-  cursor: pointer;
 }
 
 .loading {
